--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         coverage run -m unittest
     - name: runcodecov
-      if: sucsess()
+      if: success()
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN}}
       run: |
